# DesignPattern

./: README.md
abostract_factory/: CMakeLists.txt  readme
abostract_factory/include/: building.hpp  lion.hpp  mammal.hpp  reptiles.hpp  snake.hpp  zoo.hpp  zoo_factory.hpp
adapter/: CMakeLists.txt  readme
bridge/: CMakeLists.txt  readme
bridge/include/: amd_platform.hpp  intel_platform.hpp  platform.hpp  systematic.hpp  windows.hpp
bridge/src/: amd_platform.cpp  intel_platform.cpp  main.cpp  windows.cpp
builder/: CMakeLists.txt  readme
chain_responsibility/: CMakeLists.txt  readme
command/: CMakeLists.txt  readme
composite/: CMakeLists.txt  readme
decorator/: CMakeLists.txt  readme
decorator/include/: boat.hpp  car.hpp  decorator_machine.hpp  machine.hpp  plane.hpp  walkup.hpp
decorator/src/: boat.cpp  car.cpp  main.cpp  plane.cpp  walkup.cpp
facade/: CMakeLists.txt  readme
factory/: CMakeLists.txt  readme
interpreter/: CMakeLists.txt  readme
iterator/: CMakeLists.txt  readme
mediator/: readme
memento/: CMakeLists.txt  readme
motivation/: CMakeLists.txt  readme
observer/: CMakeLists.txt  readme
prototype/: CMakeLists.txt  readme
proxy/: CMakeLists.txt  readme
shared/: CMakeLists.txt  readme
singleton/: CMakeLists.txt  readme
state/: CMakeLists.txt  readme
strategy/: CMakeLists.txt  readme
template_method/: CMakeLists.txt  readme
visitor/: CMakeLists.txt  readme
visitor/include/: element.hpp  element1.hpp  element2.hpp  visitor.hpp  visitor1.hpp
visitor/src/: element1.cpp  element2.cpp  main.cpp  visitor1.cpp
(+135 files in other folders)
